--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
-    background: url(./images/bg.jpg) center no-repeat;
-    
+    background: url(./images/bg.jpg) no-repeat;
     background-size: cover;
+    background-position: center;
     height: 100vh;
     position: relative;
 }
