--- a/public/modal-style.css
+++ b/public/modal-style.css
@@ -8,8 +8,10 @@
 .modal-content {
     background-color: rgba(0, 0, 0, 0.7);
 }
- 
-span, table, .modal-content {
+
+span,
+table,
+.modal-content {
     color: #fff !important;
 }
 
@@ -48,6 +50,7 @@ table {
     padding: 5px 20px;
     transition: all 0.5s;
     opacity: 0.7;
+    border: none;
 }
 
 .pink-btn:hover {
