--- a/public/style.css
+++ b/public/style.css
@@ -68,6 +68,8 @@ body {
 
 #searchByVoiceButton {
     border-radius: 50%;
+    width: 200px;
+    height: 200px;
 }
 
 .counter {
@@ -102,7 +104,7 @@ textarea {
     cursor: pointer;
     background: rgba(0, 0, 0, 0.5);
     transition: 0.5s;
-    border-radius: 50%; 
+    border-radius: 50%;
 }
 
 @keyframes shadow-pulse {
