--- a/toast/toast.css
+++ b/toast/toast.css
@@ -24,7 +24,7 @@
     /*-moz-user-select: none;*/
     -ms-user-select: none;
     user-select: none;
-    background-color: #323232;
+    background-color: rgba(0, 0, 0, 0.4);
     /*-moz-transform: translateY(0);*/
     transform: translateY(0);
     /*-moz-transition: -moz-transform 0.23s 0ms cubic-bezier(0, 0, 0.2, 1);*/
