--- a/public/style.css
+++ b/public/style.css
@@ -106,6 +106,13 @@ textarea {
     animation: shadow-pulse 1s infinite;
 }
 
+#score {
+    padding: 6px;
+    background: rgba(0, 0, 0, 0.3);
+    width: 250px;
+    border-radius: 10px;
+}
+
 #resultsTable {
     border-radius: 25px !important;
 }
